[gd_scene load_steps=21 format=3 uid="uid://ce4s0r7ivrpid"]

[ext_resource type="Script" uid="uid://c06b3vtr0a2su" path="res://scenes/recuperar/recuperar.gd" id="1_qk7ld"]
[ext_resource type="Texture2D" uid="uid://d0vxcs6jpwl8e" path="res://assets/texturasgenericas/grey_panel.png" id="2_sv1sq"]
[ext_resource type="FontFile" uid="uid://b2lderbh3o76w" path="res://assets/fuentes/AtkinsonHyperlegible-Bold.ttf" id="3_xhckd"]
[ext_resource type="Texture2D" uid="uid://bscqeo7ft5le0" path="res://assets/inputfields/grey_button05.png" id="4_amoul"]
[ext_resource type="Texture2D" uid="uid://5el60unpnqtf" path="res://assets/botones_textura/red_button01.png" id="5_mvnbh"]
[ext_resource type="Texture2D" uid="uid://cake3pvtyxtid" path="res://assets/botones_textura/red_button02.png" id="6_8cjdl"]
[ext_resource type="Texture2D" uid="uid://dt7whsotpqdnu" path="res://assets/botones_textura/green_button04.png" id="7_2sxwn"]
[ext_resource type="Texture2D" uid="uid://berlseembd151" path="res://assets/botones_textura/green_button05.png" id="8_f6all"]
[ext_resource type="PackedScene" uid="uid://b2arq7e7ydojk" path="res://scenes/buena_carga/carga_buena.tscn" id="9_f6all"]

[sub_resource type="LabelSettings" id="LabelSettings_mvnbh"]
font = ExtResource("3_xhckd")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mvnbh"]
texture = ExtResource("4_amoul")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8amx3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sbiyp"]
texture = ExtResource("7_2sxwn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ffoq3"]
texture = ExtResource("8_f6all")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kvo3l"]
texture = ExtResource("7_2sxwn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8cjdl"]
texture = ExtResource("4_amoul")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2sxwn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f6all"]
texture = ExtResource("5_mvnbh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m2cdm"]
texture = ExtResource("6_8cjdl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0xgrm"]
texture = ExtResource("5_mvnbh")

[node name="recuperar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qk7ld")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -129.0
offset_right = 93.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sv1sq")

[node name="enviocorreo" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Colocar_correo" type="Label" parent="enviocorreo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.077
anchor_right = 0.5
anchor_bottom = 0.077
offset_left = 80.0
offset_top = 71.92
offset_right = 601.0
offset_bottom = 121.92
grow_horizontal = 2
grow_vertical = 2
text = "Coloque correo de contacto"
label_settings = SubResource("LabelSettings_mvnbh")

[node name="maillabel" type="Label" parent="enviocorreo"]
layout_mode = 0
offset_left = 23.0
offset_top = 202.0
offset_right = 700.0
offset_bottom = 305.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 40
text = "Correo"

[node name="mail" type="LineEdit" parent="enviocorreo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513
anchor_top = 0.22
anchor_right = 0.513
anchor_bottom = 0.22
offset_left = 277.48
offset_top = 188.2
offset_right = 677.48
offset_bottom = 288.2
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_mvnbh")
alignment = 1

[node name="boton_enviar_mail" type="Button" parent="enviocorreo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.52
anchor_right = 0.509
anchor_bottom = 0.52
offset_left = 162.64
offset_top = 574.2
offset_right = 529.64
offset_bottom = 715.2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_8amx3")
theme_override_styles/hover = SubResource("StyleBoxTexture_sbiyp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ffoq3")
theme_override_styles/normal = SubResource("StyleBoxTexture_kvo3l")
text = "Enviar correo"

[node name="nueva_contrasenia" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Colocar_contraenia" type="Label" parent="nueva_contrasenia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.077
anchor_right = 0.5
anchor_bottom = 0.077
offset_left = 80.0
offset_top = 71.92
offset_right = 601.0
offset_bottom = 121.92
grow_horizontal = 2
grow_vertical = 2
text = "Se le acaba de enviar una contrase単a
 temporal enviada por correo"
label_settings = SubResource("LabelSettings_mvnbh")

[node name="contralabel" type="Label" parent="nueva_contrasenia"]
layout_mode = 0
offset_left = 23.0
offset_top = 315.0
offset_right = 700.0
offset_bottom = 418.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 40
text = "Contrase単a
temporal"

[node name="contrasenia" type="LineEdit" parent="nueva_contrasenia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.512
anchor_top = 0.374
anchor_right = 0.512
anchor_bottom = 0.374
offset_left = 276.52
offset_top = 290.04
offset_right = 676.52
offset_bottom = 390.04
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_8cjdl")
alignment = 1
secret = true

[node name="boton_nueva_contrase単a" type="Button" parent="nueva_contrasenia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.52
anchor_right = 0.509
anchor_bottom = 0.52
offset_left = 13.64
offset_top = 574.2
offset_right = 662.64
offset_bottom = 715.2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxTexture_8amx3")
theme_override_styles/hover = SubResource("StyleBoxTexture_sbiyp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ffoq3")
theme_override_styles/normal = SubResource("StyleBoxTexture_kvo3l")
text = "Enviar contrase単a 
temporal"

[node name="volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_top = 0.934
anchor_right = 0.504
anchor_bottom = 0.934
offset_left = -147.88
offset_top = -65.52
offset_right = 144.12
offset_bottom = 65.48
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_xhckd")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxTexture_2sxwn")
theme_override_styles/hover = SubResource("StyleBoxTexture_f6all")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m2cdm")
theme_override_styles/normal = SubResource("StyleBoxTexture_0xgrm")
text = "Volver"

[node name="carga_buena" parent="." instance=ExtResource("9_f6all")]
visible = false
layout_mode = 1
offset_left = -1.0
offset_right = -1.0

[connection signal="pressed" from="enviocorreo/boton_enviar_mail" to="." method="_on_boton_enviar_mail_pressed"]
[connection signal="pressed" from="nueva_contrasenia/boton_nueva_contrase単a" to="." method="_on_boton_nueva_contrase単a_pressed"]
[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
